<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.deltaww.smarthome.DisplayActivity">

    <TextView
        android:id="@+id/list_room1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/room1"
        android:textSize="@dimen/room_name_textsize"
        android:gravity="center"
        android:padding="@dimen/room_name_padding"/>
    <ListView
        android:id="@+id/list1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/list_padding"
        android:headerDividersEnabled="false">
    </ListView>

    <TextView
        android:id="@+id/list_room2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/room2"
        android:textSize="@dimen/room_name_textsize"
        android:gravity="center"
        android:padding="@dimen/room_name_padding"/>
    <ListView
        android:id="@+id/list2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/list_padding">
    </ListView>

    <TextView
        android:id="@+id/list_room3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/room3"
        android:textSize="@dimen/room_name_textsize"
        android:gravity="center"
        android:padding="@dimen/room_name_padding"/>
    <ListView
        android:id="@+id/list3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/list_padding">
    </ListView>

    <TextView
        android:id="@+id/list_room4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/room4"
        android:textSize="@dimen/room_name_textsize"
        android:gravity="center"
        android:padding="@dimen/room_name_padding"/>
    <ListView
        android:id="@+id/list4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/list_padding">
    </ListView>

</LinearLayout>
